import type { Id } from './Id';

interface FiscalSponsorship {
	fiscalSponseeChangemakerId: Id;
	fiscalSponsorChangemakerId: Id;
}

export { type FiscalSponsorship };
